--- a/app/src/main/res/layout/activity_main_calculator.xml
+++ b/app/src/main/res/layout/activity_main_calculator.xml
@@ -64,10 +64,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginBottom="68dp"
         android:background="@color/colorPrimary"
+        android:onClick="checkInput"
         android:text="@string/calculate_BMI"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
